--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "dev": "supervisor src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.3"
+    "mongoose": "^6.0.3",
+    "twilio": "^3.67.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
